fix truncation issue

--- a/src/components/ui/Typography/text.scss
+++ b/src/components/ui/Typography/text.scss
@@ -37,8 +37,9 @@
 
   &[data-ellipsis],
   &[data-with-tooltip] {
-    white-space: nowrap;
     overflow: hidden;
+    max-inline-size: min(80ch, 60rem, 100%);
+    white-space: nowrap;
     text-overflow: ellipsis;
   }
 
